@@ -2,6 +2,7 @@ Revision history for Test::Count
 
           - Added Test::Count::FileMutator that can also handle the
           {{ source "file" }} include statement.
+          - Added Test::Count::FileMutator::ByFileType::App
 
 0.0500    Tue Jul  7 01:03:14 IDT 2009
           - Added lib/Test/Count/Filter/ByFileType/App.pm , which allows
